--- a/Zadachi/index.html
+++ b/Zadachi/index.html
@@ -7,9 +7,11 @@
     <title>Задачи_Костылев</title>
 </head>
 <body>
-    <h1>Задачи</h1>
     <!--<script src="js/function1.js"></script>-->
     <!--<script src="js/script.js"></script>--->
-    <script src="js/functionost.js"></script>
+    <!--<script src="js/functionost.js"></script>-->
+    <script src="js/p.js"></script>
+    <!--<script src="js/class3.js"></script>-->
+    <!--<script src="js/prototype4.js"></script>-->
 </body>
 </html>
